# collaborative-learning

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  omnet_import_readme.txt
agent/: agent.py  agent_conf.json  agent_factory.py  beans.py  conf_parser.py  decisions.py  environment.yml  test_decisions.py
docs/: .gitignore  paper.tex  slides.tex  unislides.sty
docs/paper/: .gitignore  IEEEtran.cls  paper.tex
docs/slides/: .gitignore  slides.tex
node/simulations/: nodeNetwork.ned  package.ned  run
node/src/: CMakeLists.txt  node.cc  node.ned  package.ned
node/src/agent/: agent.py  environment.yml
simulations/: .gitignore  CMakeLists.txt
simulations/messages/: ActionRequest.msg  ActionResponse.msg  AdvertiseNeighbour.msg  AgentClientMsg.msg  Data.msg  DataMsg.msg  NodeStateMsg.msg  QueueDataRequest.msg  QueueDataResponse.msg  QueueMsg.msg  QueueStateUpdate.msg  Reward.msg  RewardMsg.msg  SimulationMsg.msg  SinkRewardMsg.msg  Timeout.msg
simulations/res/: omnetpp.ini
simulations/results/: General.anf
simulations/src/: cpp_visibility_tools.h  fc_cqueue.h  main.cc.hidden  node.h  node.ned  nodeNetwork.ned  omnetpp.ini  package.ned  statistics.h  units.h
simulations/src/node/: controller.cc  controller.h  controller.ned  node.ned  package.ned
simulations/src/node/agentc/: agent_client.cc  agent_client.h  agent_client.ned  agent_client_msg.cc  agent_client_pybind.cc  agent_client_pybind.h  package.ned  python_interpreter.cc  python_interpreter.h
simulations/src/node/power/: battery.cc  battery.h  nic_power_model.h  power_chord.cc  power_chord.h  power_source.h  random_charger.h
simulations/src/node/queue/: queue.cpp  queue.h  queue.ned
simulations/src/sinknode/: package.ned  sink_controller.cc  sink_controller.h  sink_controller.ned  sink_node.ned
simulations/src/srcnode/: package.ned  src_controller.cc  src_controller.h  src_controller.ned  src_node.cc  src_node.h  src_node.ned
